updated features
